--- a/Prateek/HTML/first.html
+++ b/Prateek/HTML/first.html
@@ -28,8 +28,8 @@
             laudantium autem quis itaque ipsam at commodi cum sit quod maxime inventore? Nostrum accusamus architecto dolor maxime minus ab possimus tenetur, autem repellendus.
         </pre>
         <p>
-            Element - Paragraph, image, link,video etc.<br>
-            Attribte - Additional info about element like its size, colour etc.<br>
+            <b>Element - Paragraph, image, link,video etc.</b><br>
+            <strong>Attribte - Additional info about element like its size, colour etc.</strong><br>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, libero. Sint ipsum labore magni fuga aliquam fugiat nemo. Aspernatur voluptatem velit fugiat modi autem fugit deserunt tempore sed sint.
             <br><br><br>endus illo mollitia possimus iusto ex veritatis exercitationem obcaecati unde dolorem quae cupiditate, eius, accusamus itaque, est neque. Voluptatum dolores repudiandae recusandae ullam iste repellendus illo deleniti, rerum voluptas dolor, laboriosam reprehenderit obcaecati minus tenetur atque, cumque id quia eius distinctio numquam sint. Sit at ipsam tenetur quam quos minus explicabo sapiente neque quibusdam vero, dolore, vitae culpa nemo laborum repellendus aliquid a excepturi quaerat earum dolores delectus! Laborum, cupiditate.
         </p>
