--- a/Prateek/HTML/List.html
+++ b/Prateek/HTML/List.html
@@ -8,10 +8,45 @@
     <body>
         <!-- Ordered List-->
 
-        <ol>
-            <li>Milk</li>
+        <ol start="5" type="I">
+            <li>Milk
+                <ol type="i">
+                    <li>Cow Milk</li>
+                    <li>Goat Milk</li>
+                    <li>Bauffalo Milk</li>
+                </ol>
+            </li>
             <li>coffe</li>
             <li>Tea</li>
         </ol>
+
+
+        <!-- Unordered List-->
+
+        <br>
+        <ul style="list-style-type: none;">
+            <li>Milk 
+                <ul>
+                    <li>Cow Milk</li>
+                    <li>Goat Milk</li>
+                    <li>Bauffalo Milk</li>
+                </ul>
+            </li>
+            <li>Coffee</li>
+            <li>Tea</li>
+        </ul>
+        <br>
+
+        <!-- Description List  (used very less)-->
+         <dl>
+            <dt>Milk</dt>
+            <dd>- Rich in proteins</dd>
+            <dt>Coffee</dt>
+            <dd>- High caffiene</dd>
+            <dt>Tea</dt>
+            <dd>- Much needed for Indians</dd>
+         </dl>
+
+
     </body>
 </html>
