Audio and Video in html

--- a/Prateek/HTML/HtmlTables.html
+++ b/Prateek/HTML/HtmlTables.html
@@ -108,5 +108,63 @@
 
         </table>
 
+        <br><br><br><br><br><br><br><br>
+        <table border="2">
+            <caption>Table 4</caption>
+
+          <thead style="color: red;">
+            <tr>
+                <th>Column 1 </th>
+                <th>Column 2 </th>
+                <th>Column 3 </th>
+            </tr>
+          </thead>
+          <tbody style="color: greenyellow;">
+            <tr>
+                <td>Data 1</td>
+                <td>Data 2</td>
+                <td>Data 3</td>
+            </tr>
+
+            <tr>
+                <td>Data 4</td>
+                <td>
+
+                    <table border="1">
+                        <tr>
+                        <th>Data 5(a)</th>
+                        <th>Data 5(b)</th>
+                        </tr>
+
+                        <tr>
+                            <td>123</td>
+                            <td>456</td>
+                        </tr>
+                        <tr>
+                            <td>789</td>
+                            <td>012</td>
+                        </tr>
+                    </table>
+
+                </td>
+                <td>Data 6</td>
+            </tr>
+
+            <tr>
+                <td>Data 7</td>
+                <td>Data 8</td>
+                <td>Data 9</td>
+            </tr>
+          </tbody>
+
+          <tfoot style="color: red ;">
+            <tr>
+                <th>Column 1</th>
+                <th>Column 2</th>
+                <th>Column 3</th>
+            </tr>
+          </tfoot>
+            </table>
+
     </body>
 </html>
