--- a/Prateek/HTML/AudioVideoPdf_Iframe.html
+++ b/Prateek/HTML/AudioVideoPdf_Iframe.html
@@ -44,5 +44,18 @@
 
          </video>
 
+         <!-- pdf -->
+          
+         <!-- embed  -->
+          <embed src="Images/pdf.pdf" type="application/pdf" height="500" width="900"> 
+
+            <br>
+            <!-- iframe -->
+
+            <iframe src="Images/pdf.pdf" height="800" width="800"></iframe>
+
+            <!-- object -->
+
+            <object data="Images/pdf.pdf" height="800" width="800" type="application/pdf"></object>
     </body>
 </html>
