--- a/Prateek/HTML/Form.html
+++ b/Prateek/HTML/Form.html
@@ -152,6 +152,48 @@
                 <input type="checkbox" name="sports">Hockey
                 <input type="checkbox" name="sports">Football
             </div>
+
+            <!-- datalist -->
+
+            <div>
+                <input type="text" placeholder="Search" list="Hello">
+                <datalist id="Hello">
+                    <option value="Mango">
+                    <option value="Orange">
+                    <option value="Papaya">
+                    <option value="Car">
+                    <option value="Prateek">
+                    <option value="Amishaa">
+                </datalist>
+                <input type="submit" value="Search">
+            </div>
+
+            <br><br><br><br><br>
+
+            
+
+            <fieldset >
+                <legend>Basic Information: </legend>
+                <!-- label it is used to write anything before the box -->
+                 <label for="fname"> First Name</label> <!-- Give id to which you want to connect and then use for attribut. When you will click on Name you will be focused in the box to write the name-->
+                <input type="text" name="First_Name" id="fname"> 
+                <label for="lname">Last Name</label>
+                <input type="text" naem="Last_Name" id="lname">
+            </fieldset>
+
+            <fieldset>
+               <legend>Other Information: </legend>
+                <!-- We use fieldset instead of div in forms-->
+                <!-- To give label to feildset we use legend tag -->
+                 <label for="address">Address</label>
+                <input type="text" name="Address" id="address"> 
+                <label for="Mob">Mobile Number</label>
+                <input type="number" name="Mobile_No" id="Mob">
+            </fieldset>
+
+            <fieldset>
+                <input type="submit" value="Submit">
+            </fieldset>
         </form>
     </body>
 </html>
