--- a/Prateek/HTML/Form.html
+++ b/Prateek/HTML/Form.html
@@ -126,7 +126,7 @@
 
             <div>
                 <!-- Drop Down form -->
-                <select> <!-- Use size option to see number of options on screen, Use multiple to select multiple options-->
+                <select size=""> <!-- Use size option to see number of options on screen, Use multiple to select multiple options-->
                     <optgroup label="Cars">
                         <option>Audi</option> <!-- Use selected attribute to select anything by default -->
                         <option selected>BMW</option>
@@ -193,6 +193,10 @@
 
             <fieldset>
                 <input type="submit" value="Submit">
+            </fieldset>
+
+            <fieldset>
+                <input type="range"> 
             </fieldset>
         </form>
     </body>
