--- a/Prateek/Web-Dev/CSS/index1.html
+++ b/Prateek/Web-Dev/CSS/index1.html
@@ -14,11 +14,11 @@
             </style> -->
 
             <!-- PRIORITY IS GIVEN TO INLINE THAN JO LAST MAI LIKHA HAI USE PRIORITY MIL JATI HAI -->
-             <link rel="stylesheet" type="text/css" href="basic.css" >
+             <link rel="stylesheet" type="text/css" href="basic1.css" >
     </head>
 
     <body>
-        <!-- <h1 id="h" class="green-text underline-h">Heading</h1>  <!-- Name of id shouldn't be same in whole html-->
+        <!-- <h1 id="h" class="green-text underline-h">Heading</h1>  Name of id shouldn't be same in whole html-->
         <!-- H1 HAVE 2 CLASS GREEN TEXT AND UNDERLINE-H AND WE CAN USE THESE TO STYLE IT -->
       <!--  <p>Paragraph 1</p>
         <p class="green-text">Paragraph 2</p>
