--- a/Parth/html-css/youtube.html
+++ b/Parth/html-css/youtube.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Youtube.com clone</title>
+        <style>
+            .thumbnail{
+                width: 389px;
+            }
+        </style>
+    </head>
     <body>
-        
+        <img class = "thumbnail"src="thumbnails/hq720.avif">
     </body>
 </html>
