--- a/Prateek/Web-Dev/CSS/index2.html
+++ b/Prateek/Web-Dev/CSS/index2.html
@@ -40,5 +40,51 @@
             <br><br>
             <div id="sprite"></div>
             <div id="gradient"></div>
+            <br><br>
+            <div id="overflow">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eaque a nisi. Quae aut delectus error itaque qui eligendi voluptas velit dolore, reprehenderit inventore quas omnis earum, quod ad provident cupiditate ea voluptates? Animi unde nobis laborum sunt necessitatibus distinctio voluptates assumenda, dolores laboriosam dolorem quaerat delectus! Tempore consectetur repudiandae unde doloremque, ratione excepturi odio commodi assumenda quos fuga deleniti earum quas accusantium eaque quam architecto necessitatibus maiores. Omnis itaque quasi amet necessitatibus et architecto, quae numquam, officia sint illum quis sapiente excepturi voluptates natus quos modi unde voluptas! Quo unde ex, praesentium laudantium ipsum non porro ipsam perferendis dolorem consectetur corrupti, vel deserunt culpa doloremque optio minima earum totam, minus ratione tempore magnam modi dolorum? Praesentium cum quis blanditiis, provident facere iure facilis pariatur incidunt itaque! Quis labore quaerat rem quia aut nemo culpa expedita deleniti id corrupti, ratione ducimus veritatis ad aperiam praesentium doloremque dolorem voluptatum, modi amet! Voluptas ullam minima eligendi iure saepe eveniet, tempora veritatis est dolorem ea inventore? Tempora provident id non suscipit voluptatum, placeat explicabo accusantium quam iure totam sequi, laboriosam quisquam, voluptate ex itaque laborum officia! Itaque quasi, assumenda quod provident dolorum beatae blanditiis eos esse odio saepe incidunt deserunt minima repellat error eligendi ipsum modi rem, temporibus placeat veritatis eius sed perspiciatis ea. Similique doloribus dolorem, perspiciatis quas ratione culpa sequi voluptas quaerat magnam tempore cupiditate ex consequuntur adipisci eaque ab nesciunt necessitatibus perferendis quae nemo repellendus non voluptatem dolorum! Totam voluptatem officiis dolore atque voluptas ipsa libero, id, reiciendis accusantium animi est? Vero, rerum? Accusamus harum qui ipsa soluta, adipisci, suscipit commodi officia quod autem, accusantium laudantium magnam pariatur in impedit ratione quam sapiente doloremque! Fugit iste eveniet consequatur quis, nisi placeat repellendus quisquam totam modi obcaecati exercitationem, sapiente esse consectetur. Nulla, eligendi quasi sint consectetur perferendis aperiam voluptatibus suscipit aut.</p>
+            </div>
+            <div><textarea name="" id=""></textarea></div>
+            <br><br><br><br>
+
+            <h2>Unordered list </h2>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+            </ul>
+            
+            <hr>
+            <h2>Ordered list</h2>
+            <ol>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+            </ol>
+            <br><br><br><br>
+            <table border="1px" >
+                <caption>Table CSS</caption>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                    <th>Column 3</th>
+                </tr>
+
+                <tr>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                    <td>Data 3</td>
+                </tr>
+
+                <tr>
+                    <td>Data 4</td>
+                    <td>Data 5</td>
+                    <td>Data 6</td>
+                </tr>
+            </table>
     </body>
 </html>
