--- a/Prateek/Web-Dev/CSS/index2.html
+++ b/Prateek/Web-Dev/CSS/index2.html
@@ -66,24 +66,24 @@
                 <li>Item 5</li>
             </ol>
             <br><br><br><br>
-            <table border="1px" >
+            <table>
                 <caption>Table CSS</caption>
                 <tr>
-                    <th>Column 1</th>
+                    <th>Columjfasldfjasdjf;jasfkjn 1</th>
                     <th>Column 2</th>
                     <th>Column 3</th>
                 </tr>
 
                 <tr>
-                    <td>Data 1</td>
+                    <td>Datakfjdsakfhkfh 1</td>
                     <td>Data 2</td>
                     <td>Data 3</td>
                 </tr>
 
                 <tr>
                     <td>Data 4</td>
-                    <td>Data 5</td>
-                    <td>Data 6</td>
+                    <td>Dataksjfkasjf;ajfd;a 5</td>
+                    <td></td>
                 </tr>
             </table>
     </body>
