--- a/Prateek/Web-Dev/CSS/index3.html
+++ b/Prateek/Web-Dev/CSS/index3.html
@@ -17,10 +17,36 @@
         <hr>
         <div id="div2">Div 2 </div>
         <div id="green">
-            <a href="">Link 1</a>
-            <a href="">Link 2</a>
-            <a href="">Link 3</a>
+            hello <br>
+            <a href="" id="blue">Link 1</a>  <br> 
+            <a href="" id="inherit">Link 2 </a> <br>
+            <a href="" id="initial">Link 3</a> <br>
+        </div>
+        <img src="Images/background2.png" alt="">
+        
+        <br><br>
+        <input type="text">
+        
+        <ul>
+            <li>This is a list</li>
+            <li>This is a list</li>
+            <li>This is a list</li>
+            <li>This is a list</li>
+            <li>This is a list</li>
+        </ul>
+
+        <br><br>
+
+        <h1>This is a heading</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, cumque, dolores impedit perspiciatis sunt a, voluptatibus debitis tenetur obcaecati ea ipsa. Accusantium incidunt quas explicabo ipsum natus illo nihil, officia tenetur! Iste alias voluptates recusandae sequi eos aut explicabo, quibusdam neque, maiores saepe sit dolore, unde ea magnam nemo necessitatibus nobis earum! Suscipit mollitia beatae quaerat, consequuntur laboriosam sequi, facilis ducimus atque quidem neque earum sed reiciendis ullam! Porro necessitatibus consequuntur quis ut hic eaque provident rerum omnis, similique neque velit. Officia quos iusto ab nam illum? Necessitatibus perferendis optio aspernatur deserunt illo fugit, omnis aperiam recusandae temporibus asperiores sequi.</p>
+        <hr>
+        <br><br>
+
+        <div class="display">
+            This is a div1.
+        </div>
+        <div class="display">
+            This is a div2.
         </div>
     </body>
-
 </html>
