--- a/Prateek/Web-Development/7.3 CSS Flag Project/index.html
+++ b/Prateek/Web-Development/7.3 CSS Flag Project/index.html
@@ -6,7 +6,41 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    *{
+      margin:0px;
+    }
+    p {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      background-color: white;
+      font-size: 80px;
+      text-align: center;
+      position: relative;
+      left:350px;
+      top:50px;
+
+    }
+    .flag{
+      background-color: rgb(206, 17, 38);
+      height: 600px;
+      width: 900px;
+      margin: 8px;
+    }
+    .flag>p{
+      width: 100%;
+      background-color: rgb(206, 17, 38);
+      font-size: 80px;
+      color: white;
+      text-align: center;
+      height: 150px;
+      position: static;
+    }
+    div.flag > div {
+      height:50%;
+      background-color: rgb(0, 40, 104);
+    }
+
   </style>
 </head>
 
