--- a/Prateek/Web-Development/JavsScript/DOM Challenge Starting Files/index.html
+++ b/Prateek/Web-Development/JavsScript/DOM Challenge Starting Files/index.html
@@ -4,15 +4,21 @@
     <meta charset="utf-8">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
-
+    <style>
+      button:active {
+        color: red;
+      }
+    </style>
   </head>
   <body>
 
     <h1>Hello</h1>
 
-    <input type="checkbox">
+    <label>
+      <input type="checkbox"> Accept Terms
+    </label>
 
-    <button style=":active color:red;">Click Me</button>
+    <button>Click Me</button>
 
     <ul>
       <li class="list">
@@ -23,5 +29,4 @@
     </ul>
 
   </body>
-
 </html>
