--- a/Parth/WebDev/intro-to-html/website.html
+++ b/Parth/WebDev/intro-to-html/website.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
-</html>
+    <head>
+        <title>hello motto</title>
+        <style>
+    button{
+        background-color: red;
+        color: white;
+        border: none;
+    }
+</style>
 
 
 
+    </head>
+    <body>
+        <button title="subscribe for more" onclick="alert('im parth')">
+    Hello
+</button>
 
-
-
-
-
-<button>Hello</button>
-
-<p>paragraph of text</p>
+<p>
+    paragraph of text
+</p>
 
 <a href="https://www.youtube.com/" target="_blank">click here to go to youtube</a>
 
 
+<script>
+    alert ('hello');
+    console.log(2+2);
+</script>
+
+    </body>
+</html>
